--- a/banner/build.gradle
+++ b/banner/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'//需添加的
 apply plugin: 'com.jfrog.bintray'//需添加的
-version = "1.5.0" // 修改为你的版本号
+version = "1.5.1" // 修改为你的版本号
 
 android {
     compileSdkVersion 27
@@ -21,8 +21,8 @@ android {
 
 }
 
-def siteUrl = 'https://github.com/zguop/statusbarUtil'
-def gitUrl = 'https://github.com/zguop/statusbarUtil.git'
+def siteUrl = 'https://github.com/zguop/QyBanner'
+def gitUrl = 'https://github.com/zguop/QyBanner.git'
 group = "com.to.aboomy"
 
 install {
