--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(":banner")
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     api "com.github.bumptech.glide:glide:4.9.0"
+
 
 }
