--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.to.aboomy.bannersample"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -28,6 +28,12 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     api "com.github.bumptech.glide:glide:4.9.0"
+    api 'com.to.aboomy:statusbar_lib:1.2.1'
+    api 'com.github.hackware1993:MagicIndicator:1.6.0'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
 
+
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:1.6.3"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
 
 }
