--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".activity.IndicatorStyleActivity"/>
         <activity android:name=".activity.FragmentViewPagerActivity"/>
         <activity android:name=".activity.MultBannerActivity"/>
+        <activity android:name=".activity.AnimActivity"/>
     </application>
 
 </manifest>
