--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".activity.FragmentViewPagerActivity"/>
         <activity android:name=".activity.MultBannerActivity"/>
         <activity android:name=".activity.AnimActivity"/>
+        <activity android:name=".activity.Indicator2Activity"/>
     </application>
 
 </manifest>
