--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
     api "com.github.bumptech.glide:glide:4.9.0"
     api 'com.to.aboomy:statusbar_lib:1.2.1'
     api 'com.github.hackware1993:MagicIndicator:1.6.0'
@@ -36,5 +38,5 @@ dependencies {
 
 
 //    implementation project(":banner")
-    implementation 'com.waitou:banner:3.0.5'
+    implementation  'com.waitou:banner:3.0.5-x'
 }
