--- a/banner/build.gradle
+++ b/banner/build.gradle
@@ -15,6 +15,6 @@ android {
     }
 }
 dependencies {
-    compileOnly 'com.android.support:appcompat-v7:28.0.0'
+    compileOnly 'androidx.viewpager:viewpager:1.0.0'
 }
 apply from:"${rootProject.projectDir}/uploadBintrayNoJavadoc.gradle"
