--- a/banner/gradle.properties
+++ b/banner/gradle.properties
@@ -1,5 +1,5 @@
 # 包的GroupId
-BINTRAY_PKG_GROUP_ID=com.waitou
+BINTRAY_PKG_GROUP_ID=com.to.aboomy
 # 包的ArtifactId
 BINTRAY_PKG_ARTIFACT_ID=banner
 # 包的版本号，下次更新是只需要更改版本号即可
