新增一个例子

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,10 @@ dependencies {
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:2.0.24'
     implementation 'com.zhy:magic-viewpager:1.0.1'
     implementation 'com.github.lihangleo2:ShadowLayout:2.1.5'
+    implementation 'com.blankj:utilcode:1.25.9'
 
 
     implementation project(":banner")
+
 //    implementation 'com.waitou:banner:3.0.6'
 }
