--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     
     repositories {
-        google()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
+        google()
+        mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
@@ -19,11 +19,11 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
+        google()
+        mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://jitpack.io' }
     }
 }
 
