--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ dependencies {
     implementation 'com.blankj:utilcode:1.25.9'
 
 
-//    implementation project(":banner")
-    implementation 'com.to.aboomy:banner:3.0.8-x'
+//    implementation 'com.to.aboomy:banner:3.0.8-x'
+
+
+    implementation project(':pager2')
+    implementation project(':banner')
+
 }
