--- a/pager2/src/main/AndroidManifest.xml
+++ b/pager2/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.to.aboomy.pager2banner" />
+    package="com.to.aboomy.pager2" />
