--- a/pager2/build.gradle
+++ b/pager2/build.gradle
@@ -19,5 +19,5 @@ android {
 }
 
 dependencies {
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    compileOnly "androidx.viewpager2:viewpager2:1.0.0"
 }
