--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     api "com.github.bumptech.glide:glide:4.9.0"
     api 'com.to.aboomy:statusbar_lib:1.2.1'
