--- a/pager2/build.gradle
+++ b/pager2/build.gradle
@@ -21,3 +21,5 @@ android {
 dependencies {
     compileOnly "androidx.viewpager2:viewpager2:1.0.0"
 }
+
+apply from:"${rootProject.projectDir}/uploadBintray.gradle"
