--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.to.aboomy.bannersample">
+    package="com.to.aboomy.bannersample">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -12,23 +12,27 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LunchActivity">
+        <activity android:name=".LunchPageActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.MainActivity"/>
-        <activity android:name=".activity.RecyclerActivity"/>
-        <activity android:name=".activity.FragmentViewPagerActivity"/>
-        <activity android:name=".activity.MultBannerActivity"/>
-        <activity android:name=".activity.AnimActivity"/>
-        <activity android:name=".activity.Indicator2Activity"/>
-        <activity android:name=".activity.RevealBannerActivity"/>
+        <activity android:name=".activity.ViewPagerLunchActivity" />
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.RecyclerActivity" />
+        <activity android:name=".activity.FragmentViewPagerActivity" />
+        <activity android:name=".activity.MultBannerActivity" />
+        <activity android:name=".activity.AnimActivity" />
+        <activity android:name=".activity.Indicator2Activity" />
+        <activity android:name=".activity.RevealBannerActivity" />
 
-        <activity android:name=".viewpager2.Pager2MainActivity"/>
+
+
+        <activity android:name=".viewpager2.ViewPager2LunchActivity"/>
+        <activity android:name=".viewpager2.Pager2MainActivity" />
     </application>
 
 </manifest>
