--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
 
 
         <activity android:name=".viewpager2.ViewPager2LunchActivity"/>
+        <activity android:name=".viewpager2.Pager2RecyclerViewActivity"/>
         <activity android:name=".viewpager2.Pager2MainActivity" />
     </application>
 
