pager2发布0.0.1正式版

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,10 @@ dependencies {
 
 
 //    implementation 'com.to.aboomy:banner:3.0.8-x'
-
+//    implementation 'com.to.aboomy.pager2:banner:0.0.1'
 
     implementation project(':pager2')
     implementation project(':banner')
+
 
 }
