--- a/pager2/gradle.properties
+++ b/pager2/gradle.properties
@@ -3,7 +3,7 @@ BINTRAY_PKG_GROUP_ID=com.to.aboomy.pager2
 # 包的ArtifactId
 BINTRAY_PKG_ARTIFACT_ID=banner
 # 包的版本号，下次更新是只需要更改版本号即可
-BINTRAY_PKG_VERSION=0.0.1-alpha
+BINTRAY_PKG_VERSION=0.0.1
 # 包的打包方式 aar/jar
 BINTRAY_PKG_PACKAGING=aar
 # bintray上的仓库名
