--- a/pager2Banner/gradle.properties
+++ b/pager2Banner/gradle.properties
@@ -1,7 +1,7 @@
 # 包的GroupId
-BINTRAY_PKG_GROUP_ID=com.to.aboomy.pager2
+BINTRAY_PKG_GROUP_ID=com.to.aboomy
 # 包的ArtifactId
-BINTRAY_PKG_ARTIFACT_ID=banner
+BINTRAY_PKG_ARTIFACT_ID=pager2Banner
 # 包的版本号，下次更新是只需要更改版本号即可
 BINTRAY_PKG_VERSION=0.0.1
 # 包的打包方式 aar/jar
@@ -17,7 +17,7 @@ BINTRAY_PKG_WEBSITE_URL=https://github.com/zguop/banner
 # 项目的版本控制地址（git/svn等）
 BINTRAY_PKG_VCSURL=https://github.com/zguop/banner
 # 项目描述
-BINTRAY_PKG_DESC=banner
+BINTRAY_PKG_DESC=viewpager2 banner
 # 开发者Id
 BINTRAY_PKG_DEVELOPER_ID=a13706649811
 # 开发者名字
