--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
 //    implementation 'com.to.aboomy:banner:3.0.8-x'
 //    implementation 'com.to.aboomy.pager2:banner:0.0.1'
 
-    implementation project(':pager2Banner')
     implementation project(':banner')
+//    implementation project(':pager2banner')
 
-
+    implementation 'com.to.aboomy:pager2banner:0.0.1'
 }
