--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".viewpager2.Pager2RecyclerViewActivity"/>
         <activity android:name=".viewpager2.Pager2MainActivity" />
         <activity android:name=".viewpager2.MultPager2BannerActivity"/>
+        <activity android:name=".viewpager2.NestedPager2Activity"/>
     </application>
 
 </manifest>
