增加viewPager嵌套viewpager 例子

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".viewpager.AnimActivity" />
         <activity android:name=".viewpager.Indicator2Activity" />
         <activity android:name=".viewpager.RevealBannerActivity" />
+        <activity android:name=".viewpager.NestedPagerActivity"/>
 
 
 
