--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.to.aboomy.bannersample"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -25,6 +25,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    //Viewpager2 PagerTransformer
+    implementation 'com.github.saeed-younus:finite-cover-flow:1.0.1'
+
 
     api "com.github.bumptech.glide:glide:4.9.0"
     api 'com.to.aboomy:statusbar_lib:1.2.1'
