--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,8 @@ dependencies {
 
 //    implementation 'com.to.aboomy.pager2:banner:0.0.1'
 
-//    implementation project(':banner')
-        implementation 'com.to.aboomy:banner:3.1.3-x'
+    implementation project(':banner')
+//        implementation 'com.to.aboomy:banner:3.1.3-x'
 
 
     implementation project(':pager2banner')
