--- a/banner/gradle.properties
+++ b/banner/gradle.properties
@@ -1,26 +1,18 @@
 # 包的GroupId
-BINTRAY_PKG_GROUP_ID=com.to.aboomy
+PKG_GROUP_ID=io.github.zguop
 # 包的ArtifactId
-BINTRAY_PKG_ARTIFACT_ID=banner
+PKG_ARTIFACT_ID=banner
 # 包的版本号，下次更新是只需要更改版本号即可
-BINTRAY_PKG_VERSION=3.1.5-x
-# 包的打包方式 aar/jar
-BINTRAY_PKG_PACKAGING=aar
-# bintray上的仓库名
-BINTRAY_PKG_REPO=maven
-# 组织名 不填默认为用户
-BINTRA_PKG_USER_ORG=
-# 发布到JCenter上的项目名字
-BINTRAY_PKG_NAME=banner
-# 项目主页
-BINTRAY_PKG_WEBSITE_URL=https://github.com/zguop/banner
-# 项目的版本控制地址（git/svn等）
-BINTRAY_PKG_VCSURL=https://github.com/zguop/banner
+PKG_VERSION=3.1.5
 # 项目描述
-BINTRAY_PKG_DESC=banner
+PKG_DESC=banner是一个轮播控件
 # 开发者Id
-BINTRAY_PKG_DEVELOPER_ID=a13706649811
+PKG_DEVELOPER_ID=374735994@qq.com
 # 开发者名字
-BINTRAY_PKG_DEVELOPER_NAME=waitou
+PKG_DEVELOPER_NAME=utomi
 # 开发者邮箱
-BINTRAY_PKG_DEVELOPER_EMAIL=374735994@qq.com
+PKG_DEVELOPER_EMAIL=374735994@qq.com
+# 项目主页
+PKG_WEBSITE_URL=https://github.com/zguop/banner
+# 项目的版本控制地址（git/svn等）
+PKG_VCSURL=https://github.com/zguop/banner.git
